Fri Feb 18 08:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merged the POArefactor3 branch to main. This branch is a refactoring
        of the PortableServer library. The POA is now using strategies to
        implement its functionality.

        A short overview of the changes, see below for details:
        - The POA is rewritten so that it uses strategies for its
        implementation
        - The ImR handling is moved to the new ImR_Client library.
        - The MIOP part of the POA is moved to the GOA. See the latest version
        of the MIOP specification. You have to link now with the PortableGroup
        library and retrieve a GOA instead of the RootPOA.
        - Implemented several missing parts of POA functionality as described
        by the latest corba specification. Missing functionality, incorrect
        exceptions, incorrect minor codes and much more
        - Splitted the huge PortableServer.pidl file in several smaller files
        and regenerated all the generated files in the repository
        - Move TAO_ORB_Manager from
        PortableServer to Utils library, this is a helper class.
        - The POA has
        been split in Root_POA and Regular_POA, on this we will more in the
        future so that the Root_POA just pulls in the minimal set of things
        needed.

        Almost all test work without problems, a few are failing at which I
        will look soon, we will work on this the next days. This checkin is
        done now so that Ossama can merge his refactoring based on this.

        Thu Feb 17 12:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Root_POA.{h,cpp}:
        * tao/PortableServer/ServantRetentionStrategy*.{h,cpp}:
        * tao/PortableServer/RequestProcessingStrategy*.{h,cpp}:
          Reimplemented id_to_servant (). Previously this called the servant
          retention strategy which looked if there was a default servant. Now